--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,11 @@ jobs:
           java-version: '8'
           distribution: 'temurin'
 
+      - name: Setup and execute Gradle 'check' task
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: check
+
       - name: Run Trivy vulnerability scanner in repo mode #1
         if: always()
         uses: aquasecurity/trivy-action@master
