--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,16 +19,23 @@ jobs:
           java-version: '8'
           distribution: 'temurin'
 
-      - name: Setup and execute Gradle 'check' task
+      - name: Build application
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: check
+          arguments: installDist
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: false
+          tags: test:latest
 
       - name: Run Trivy vulnerability scanner in repo mode #1
         if: always()
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'fs'
+          # scan-type: 'fs'
+          image-ref: test:latest
           ignore-unfixed: true
           format: 'table'
           severity: 'CRITICAL,HIGH'
@@ -37,7 +44,8 @@ jobs:
         if: always()
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'fs'
+          # scan-type: 'fs'
+          image-ref: test:latest
           ignore-unfixed: true
           format: 'sarif'
           output: 'trivy-results.sarif'
@@ -48,3 +56,4 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results.sarif'
+
