--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,7 @@ jobs:
         run: |
             pwd
             ls -l
+            ls -l build
 
       - name: Build and push
         uses: docker/build-push-action@v3
