--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,12 @@ jobs:
             pwd
             ls -l build/install
 
+      - name: Debug2
+        run: |
+            pwd
+            ls -l 
+            ls -l build
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
