--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,23 +32,24 @@ jobs:
           # scan-type: 'fs'
           image-ref: test:latest
           ignore-unfixed: true
+          exit-code: '1'
           format: 'table'
           severity: 'CRITICAL,HIGH'
 
-      - name: Run Trivy vulnerability scanner in repo mode #2
-        if: always()
-        uses: aquasecurity/trivy-action@master
-        with:
-          # scan-type: 'fs'
-          image-ref: test:latest
-          ignore-unfixed: true
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+#     - name: Run Trivy vulnerability scanner in repo mode #2
+#       if: always()
+#       uses: aquasecurity/trivy-action@master
+#       with:
+#         # scan-type: 'fs'
+#         image-ref: test:latest
+#         ignore-unfixed: true
+#         format: 'sarif'
+#         output: 'trivy-results.sarif'
+#         severity: 'CRITICAL,HIGH'
 
-      - name: Upload Trivy scan results to GitHub Security tab
-        if: always()
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: 'trivy-results.sarif'
+#     - name: Upload Trivy scan results to GitHub Security tab
+#       if: always()
+#       uses: github/codeql-action/upload-sarif@v2
+#       with:
+#         sarif_file: 'trivy-results.sarif'
 
