--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,8 +3,8 @@ name: CI
 on:
   push:
   pull_request:
-  schedule:
-    - cron:  '*/10 * * * *'
+# schedule:
+#   - cron:  '*/10 * * * *'
 
 env:
   TERM: dumb
