--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,19 +38,24 @@ jobs:
           format: 'table'
           severity: 'CRITICAL,HIGH'
 
-#     - name: Create Issue on Failed workflow
-#       if: ${{ failure() }}
-#       uses: dacbd/create-issue-action@main
-#       with:
-#         # token: ${{ github.token }}
-#         token: ${{ secrets.PAT }}
-#         repo: private-test
-#         title: Action workflow failed.
-#         body: |
-#           ### Context
-#           [Failed Run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
-#           [Codebase](https://github.com/${{ github.repository }}/tree/${{ github.sha }})
-#           Workflow name - `${{ github.workflow }}`
-#           Job -           `${{ github.job }}`
-#           status -        `${{ job.status }}`
-#         assignees: komamitsu
+      - name: Post the failure to Slack
+        if: failure()
+        uses: slackapi/slack-github-action@v1.23.0
+        with:
+        payload: |
+          {
+            "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+            "blocks": [
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                }
+              }
+            ]
+          }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+
