--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,13 +44,13 @@ jobs:
         with:
           payload: |
             {
-              "text": "The vulnerability check (HIGH) on ${{ github.repository }} failed (${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})",
+              "text": "The vulnerability check (HIGH) on `${{ github.repository }}` failed (${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})",
               "blocks": [
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "The vulnerability check (HIGH) on ${{ github.repository }} failed (${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
+                    "text": "The vulnerability check (HIGH) on `${{ github.repository }}` failed (${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
                   }
                 }
               ]
