--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "The vulnerability check ($\text{\color{orange}{HIGH}}$) on `${{ github.repository }}` failed (${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
+                    "text": "The vulnerability check (HIGH) on <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})|${{ github.repository }}>"
                   }
                 }
               ]
