--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,12 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-		    "text": ":warning: The vulnerability check (HIGH) on <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})|${{ github.repository }}>"
+                    "text": "The vulnerability check (HIGH) on <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})|${{ github.repository }}>"
+                  },
+                  "accessory": {
+                    "type": "image",
+                    "image_url": "https://is5-ssl.mzstatic.com/image/thumb/Purple3/v4/d3/72/5c/d3725c8f-c642-5d69-1904-aa36e4297885/source/256x256bb.jpg",
+                    "alt_text": "Haunted hotel image"
                   }
                 }
               ]
